<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.projectv2.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:textColor="@android:color/black" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:background="@color/colorButton1"
                    android:text="@string/mode_1" />
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:background="@color/colorButton1"
                    android:text="@string/mode_2" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorButton1"
                    android:text="@string/mode_static1" />
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorButton1"
                    android:text="@string/mode_static2" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorButton1"
                    android:text="@string/mode_calc" />
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="170dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorButton1"
                    android:text="@string/mode_checklotto" />

            </android.support.v7.widget.LinearLayoutCompat>



        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
